<resources>
    <string name="app_name">ChessProject</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Detector</string>
    <string name="title_games">Games</string>
    <string name="title_prepare_image">Prepare Image</string>
    <string name="title_result">Detection Result</string>
    <string name="retry">Retry</string>
    <string name="next">Next</string>
    <string name="evaluation_question">Which side is winning?</string>
    <string name="white">White</string>
    <string name="draw">Draw</string>
    <string name="black">Black</string>
    <string name="congratulation">Congratulation</string>
    <string name="cancle">Cancle</string>
    <string name="ready">Ready</string>
    <string name="blind_puzzle_label">Blind Puzzle</string>
    <string name="evaluation_game_label">Who Is Wining?</string>
    <string name="puzzle_label">Puzzle</string>
    <string name="title_games_guess_the_eval">Who Is Wining?</string>
    <string name="title_puzzle">Puzzle</string>
    <string name="title_blind_puzzle">Blind Puzzle</string>
    <string name="help_detection">Help Detection</string>
    <string name="help_puzzle">Help Puzzle</string>
    <string name="help_blind_puzzle">Help Blind Puzzle</string>
    <string name="help_evaluation_game">Help Evaluation Game</string>
    <string name="you_are_white">You Are White</string>
    <string name="you_are_black">You Are Black</string>
    <string name="choose_next_turn">Who is going next?</string>
    <string name="choose_your_perspective">Choose your perspective?</string>
    <string name="chessboard">Chessboard</string>
</resources>
