<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.games.GamesFragment"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evaluation_game_label"
        android:layout_gravity="center"
        android:id="@+id/evaluation_game"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puzzle_label"
        android:layout_gravity="center"
        android:id="@+id/puzzle"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blind_puzzle_label"
        android:layout_gravity="center"
        android:id="@+id/blind_puzzle"/>
</LinearLayout>